--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <div id="main">
         <div id="hero">
             <div id="nav">
-                <a href="#">hallal</a>
+                <a href="#">Jashuva</a>
                 <h5>MENU+</h5>
             </div>
             <div id="heading">
