--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </div>
         <div id="second">
             <div class="elem">
-                <img src="./vscode/Software-engineer.webp" alt="">
+                <img src="Software-engineer.webp" alt="">
                 <h1>education
                 </h1>
                 <h5>2021-2025</h5>
             </div>
             <div class="elem">
-                <img src="./vscode/2267906_505c.jpg" alt="">
+                <img src="2267906_505c.jpg" alt="">
                 <h1>experience</h1>
                 <h5>2022</h5>
             </div>
