--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div id="about">
-            <img src="./vscode/download.jpg" alt="">
+            <img src="vinay.jpg" alt="">
             <div id="textabout">
                 <h5>(ABout me)</h5>
                 <p>I'm a product designer with a passion for creating products that not only look good but also solve
